KUBERNETES/3-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  labels:
    app: flask-app
  name: flask-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-app
  template:
    metadata:
      labels:
       app: flask-app
    spec:
      containers:
        - image: zeromaxinc/secret_kubernetes_uacademy:latest
          name: flask-app
