KUBERNETES/4-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: class
  creationTimestamp: null
  name: flask-app-ingress
spec:
  rules:
  - host: localhost
    http:
      paths:
      - backend:
          service:
            name: flask-app-service
            port:
              number: 80
        path: /
        pathType: Prefix
